; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip27/extr_ip27-nmi.c_nmi_node_eframe_save.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip27/extr_ip27-nmi.c_nmi_node_eframe_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CNODEID_NONE = common dso_local global i64 0, align 8
@INVALID_NASID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nmi_node_eframe_save(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = load i64, i64* @CNODEID_NONE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %32

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = call i64 @COMPACT_TO_NASID_NODEID(i64 %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @INVALID_NASID, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  br label %32

16:                                               ; preds = %9
  store i32 0, i32* %4, align 4
  br label %17

17:                                               ; preds = %29, %16
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @NODE_NUM_CPUS(i32 %19)
  %21 = icmp slt i32 %18, %20
  br i1 %21, label %22, label %32

22:                                               ; preds = %17
  %23 = load i64, i64* %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @nmi_cpu_eframe_save(i64 %23, i32 %24)
  %26 = load i64, i64* %3, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @nmi_dump_hub_irq(i64 %26, i32 %27)
  br label %29

29:                                               ; preds = %22
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %4, align 4
  br label %17

32:                                               ; preds = %8, %15, %17
  ret void
}

declare dso_local i64 @COMPACT_TO_NASID_NODEID(i64) #1

declare dso_local i32 @NODE_NUM_CPUS(i32) #1

declare dso_local i32 @nmi_cpu_eframe_save(i64, i32) #1

declare dso_local i32 @nmi_dump_hub_irq(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
